--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#citas">Citas</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#empleados">Empleados</a></li>
+                <li><a href="#agenda">Agenda</a></li>
             </ul>
         </nav>
     </header>
@@ -58,6 +59,11 @@
                 <button type="submit">Agregar Empleado</button>
             </form>
             <ul id="listaEmpleados"></ul>
+        </section>
+
+        <section id="agenda">
+            <h2>Agenda de Citas</h2>
+            <ul id="listaAgenda"></ul>
         </section>
     </main>
     <script src="js/scripts.js"></script>
